# ports-and-adapters-architecture

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
app/: main.py
app/adapters/: __init__.py
app/adapters/driver/: __init__.py
app/adapters/driver/rest/: __init__.py
app/adapters/driver/rest/routers/: __init__.py  api_version.py  version_manager.py
app/adapters/driver/rest/routers/v1/: __init__.py  version.py
