[tool.poetry]
name = "ports-and-adapters-architecture"
version = "0.1.0"
description = ""
authors = ["jcalarcon98 <jeancalarcon98@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
